--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zed-jwt"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2024"
 authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
 description = " A Zed extension for decoding and validating JWT tokens."
@@ -16,7 +16,7 @@ serde_json = "1.0"
 base64 = "0.22"
 chrono = "0.4"
 hmac = "0.12"
-sha2 = "0.10"
+sha2 = { version = "0.10", features = ["oid"] }
 anyhow = "1.0"
 rsa = "0.9"
 digest = "0.10.7"
